replaced h2 tags with h1 for page titles, replaced h4-h5 tags with h2-h3 for subtitles, some changes in text content

--- a/files for admin/company.phtml
+++ b/files for admin/company.phtml
@@ -1,14 +1,16 @@
 <div class="company-page" data-mage-init='{"slickCompanyPage" : {}, "companyPage" : {} }'>
     <div class="company-page__container _container">
         <div class="company-page__top">
-            <h2 class="h2 company-page__title">We are a team of international experts united by a <span class="company-page__title--orange">single goal</span></h2>
-            <h4 class="h4 company-page__sub-title _text-align-right">We help to make money on the Internet, as well as contributes to business development by introducing IT innovations into them.</h4>
+            <h1 class="h2 company-page__title">
+                We are a team of international experts united by a <span class="company-page__title--orange">single goal</span>
+            </h1>
+            <h2 class="h4 company-page__sub-title _text-align-right">We help make money on the Internet and contribute to business development by introducing IT innovations into them.</h2>
             <div class="company-page__image">
                 <img loading="eager" src="{{media url='wysiwyg/company/background-about.png'}}" alt="sec">
             </div>
             <div class="company-page__squares company-squares">
                 <div class="company-squares__text _text-align-right">
-                    <h5 class="h5">We are the Magento focused web-development company named Perspective Studio with HQ located in Kyiv, Ukraine with more than 67 employees. </h5>
+                    <h5 class="h5">We are the Magento-focused web-development company named Perspective Studio, with HQ in Kyiv, Ukraine, with more than 60 employees. </h5>
                 </div>
                 <div class="company-squares__square company-square company-square--fronts">
                     <div class="company-square__digit">10</div>
@@ -34,8 +36,9 @@
                 <div class="company-growth__label _section-label">Growth</div>
                 <div class="company-growth__content">
                     <div class="company-growth__top">
-                        <h5 class="h5 company-growth__text">Our company was founded 11 years ago and we dealt with different CMS and Frameworks during that period but after some time we realized that we should have a strong aim to develop ourselves in one thing, mastering skills in a narrow field.</h5>
-                        <h5 class="h5 company-growth__text _text-align-right">Perspective Studio has seen constant annual growth and success each year since inception. We have at the moment four offices in Kyiv, Uzhgorod, Shostka, Cherkasy and Kriviy Rig. </h5>
+                        <h5 class="h5 company-growth__text">Our company was founded in 2009 and initially dealt with different CMS and Frameworks. Still, after some time, we realized that we should have a definite aim to develop ourselves in one thing, mastering skills in a narrow area.</h5>
+                        <h5 class="h5 company-growth__text _text-align-right">Perspective Studio has seen constant annual growth and success since its inception. We currently have five offices in Kyiv, Uzhhorod, Shostka, Cherkasy, and Kryvyi Rih.
+                        </h5>
                     </div>
 
                     <div class="company-growth__bottom">
@@ -75,7 +78,8 @@
                 <div class="company-team__label _section-label">Meet Our Team</div>
                 <div class="company-team__content">
                     <h3 class="h3 company-team__title">Key persons of the company</h3>
-                    <h5 class="h5 company-team__sub-title _text-align-right">Experts in their respective fields and a truly stellar team of executives that work hard every day to ensure that the Сompany offers the best services in industry. Team growth and implementation of best practices is what the guys do every day.</h5>
+                    <h5 class="h5 company-team__sub-title _text-align-right">Perspective is the experts in their respective fields and a truly stellar team of executives that work hard every day to ensure that our Сompany offers the best services in the e-commerce industry. Team growth and implementation of best practices are what the guys do every day.
+                    </h5>
                     <div class="company-team__gallery team-gallery">
                         <div class="team-gallery__col">
                             <div class="team-gallery__person" data-container-pos="1">
@@ -177,7 +181,7 @@
                         </a>
                     </div>
                     <div class="gallery-photos__col ">
-                        <h5 class="h5 gallery-photos__sub-title _text-align-right">Sure, we know how to work together, but we also know how to play together. This helps build strong relationships, amazing projects and an environment that puts people first—and they know it.</h5>
+                        <h5 class="h5 gallery-photos__sub-title _text-align-right">Sure, we know how to work together, but we also know how to play together. A friendly atmosphere helps build strong relationships, unique projects, and an environment that puts people first—and they know it.</h5>
                         <div class="gallery-photos__item">
                             <img loading="lazy" src="{{media url='wysiwyg/company/4.png' }}" alt="four">
                         </div>
@@ -199,7 +203,7 @@
                 <div class="company-pets__label _section-label">Pet-friendly</div>
                 <div class="company-pets__content">
                     <h3 class="h3 company-pets__title">Man’s Best Friends at Work</h3>
-                    <h5 class="h5 company-pets__sub-title _text-align-right">We realize how beneficial and important a pet-friendly office is for our employees. Pets in the workplace have a way of bringing people together, critical for being both interactive and productive. </h5>
+                    <h5 class="h5 company-pets__sub-title _text-align-right">We realize how beneficial and essential a pet-friendly office is for our employees. Pets in the workplace have a way of bringing people together, which is critical for being both interactive and productive.</h5>
                     <div class="company-pets__gallery pets-gallery">
                         <div class="pets-gallery__col">
                             <div class="pets-gallery__image">
