--- a/files for admin/contacts.phtml
+++ b/files for admin/contacts.phtml
@@ -1,12 +1,12 @@
 <main class="contact-page">
     <div class="contact-page__container _container">
         <div class="contact-page__top">
-            <div class="contact-page__title">
-                <p>we are <span style="display:inline" class="contact-page__title contact-page__title--orange">open<br> for your ideas,</span> questions and needs</p>
-            </div>
-            <h4 class="h4 contact-page__sub-title">
-                <p>Some of the world’s most impactful products, solutions and campaigns start with a conversation. Tell us about what you’re making and we’ll see how we can help</p>
-            </h4>
+            <h1 class="contact-page__title">
+                <p>we are <span style="display:inline" class="contact-page__title contact-page__title--orange">open<br> for your ideas,</span> questions, and needs</p>
+            </h1>
+            <h2 class="h4 contact-page__sub-title">
+                <p>The world’s most impactful products, solutions, and campaigns start with a conversation. Tell us about what you’re making, and we’ll see how we can help.</p>
+            </h2>
         </div>
         <p>{{widget type="Perspective\Forms\Block\Decorators\HireUs" left_text="Hire Us" title="GET STARTED" description="We're here to help. Tell us a little about your project and we'll be in touch" name_placeholder="Name" phone_placeholder="Phone" email_placeholder="E-mail" detail_placeholder="Project details" submit_url="perspective_forms/index/submit" template="Perspective_Forms::decorator/action_hire_us.phtml"}}</p>
         {{widget type="Magento\Cms\Block\Widget\Block" template="widget/static_block/default.phtml" block_id="4"}}
