--- a/files for admin/main.phtml
+++ b/files for admin/main.phtml
@@ -2,6 +2,8 @@
     <!-- BG image (SVG) add to page using CSS pseudo-element :after-->
     <div class="main-page__bg-image"></div>
 
+    <h1 class="_hidden">We are your best Magento Team</h1>
+
     <div class="main-intro">
         <div class="main-intro__body _container">
             <div class="main-intro__title intro-title">
@@ -119,10 +121,7 @@
                             <span class="_sliding-text__line">Under One Roof</span>
                         </h3>
                         <h5 class="h5 digital-block__sub-title _text-align-right">
-                            We have a wealth of experience working with
-                            corporate and personal clients. Many of those
-                            clients have been working with us for more than 5
-                            years.
+                            We have a wealth of experience working with corporate and personal clients. Many of those clients have worked with us for more than 5 years.
                         </h5>
                     </div>
                     <div class="digital-block__image">
@@ -515,10 +514,8 @@
                         <span class="_sliding-text__line">Who we are</span>
                     </h3>
                     <h5 class="h5 company__text _text-align-right">
-                        With more than a decade of experience, Perspective has
-                        become a leader in digital experiences. <br /> Clients
-                        worldwide entrust us with the design, development and
-                        management of their websites.
+                        With more than a decade of experience, Perspective has become a leader in digital experiences.<br />
+                        Clients worldwide entrust us with their website design, development, and management.
                     </h5>
 
                     <div class="company__squares squares-company squares-company--mobile">
@@ -551,11 +548,9 @@
                         </div>
                     </div>
                     <h5 class="h5 company__text _text-align-right">
-                        We are the Magento focused web-development company named
-                        Perspective Studio with HQ located in Kyiv, Ukraine with
-                        more than 67 employees. <br /> Most of them are strong middle
-                        and senior developers with 5+ years of experience in
-                        Magento.
+                        We are the Magento‑focused web‑development company named Perspective Studio, with HQ in Kyiv, Ukraine, with more than 60 employees.
+                        <br />
+                        Most are strong middle and senior developers with 5+ years of experience in Magento.
                     </h5>
                     <div class="company__image">
                         <img loading="lazy" src="{{media url='wysiwyg/Main/who-we.png'}}" alt="who-we-are" />
@@ -814,16 +809,14 @@
                         <br /><span class="_sliding-text__line">say about us</span>
                     </h3>
                     <h5 class="h5 comments__sub-title _text-align-right">
-                        We have a wealth of experience working with corporate and personal
-                        clients. Many of those clients have been working with us for more
-                        than 5 years
+                        We have a wealth of experience working with corporate and personal clients. Many of those clients have worked with us for more than 5 years.
                     </h5>
                 </div>
 
                 <div class="comments__content">
                     <ul class="comments__list">
-                         <!-- Vodafone -->
-                         <div class="comments__item comment">
+                        <!-- Vodafone -->
+                        <div class="comments__item comment">
                             <div class="comment__header">
                                 <div class="comment__icon">
                                     <img loading="lazy" src="{{media url='wysiwyg/Main/message/Group.png'}}" alt="C " />
@@ -1008,7 +1001,8 @@
                 </h3>
                 <p class="main-certification__text _text-align-right">
                     We know how important adherence is. <br />
-                    That’s why some of current certifications include:
+                    That’s why some of the current certifications include
+                    the following:
                 </p>
                 <div class="main-certification__adobe-achievments adobe-achievments">
                     <ul class="adobe-achievments__list">
@@ -1039,9 +1033,9 @@
                                     Adobe Certified Expert
                                 </div>
                                 <div class="adobe-achievments__text">
-                                    Front-end Developer<br/>
-                                    Back-end Developer<br/>
-                                    Business Practitioner 
+                                    Front-end Developer<br />
+                                    Back-end Developer<br />
+                                    Business Practitioner
                                 </div>
                             </div>
                         </li>
@@ -1065,8 +1059,7 @@
             <div class="main-certification__col">
                 <div class="main-certification__text--open-sans">
                     <p class="_text-align-right">
-                        Also, we already have 8 certified developers and
-                        solution specialist with 13 certificates for M1 and M2.
+                        Also, we already have 8 certified developers and solution specialists with 13 certificates for M1 and M2.
                     </p>
                 </div>
                 <div class="main-certification__magento-achievments magento-achievments">
