--- a/files for admin/services.phtml
+++ b/files for admin/services.phtml
@@ -1,15 +1,15 @@
 <div class="services-page" data-mage-init='{"servicepage":{}}'>
     <div class="services-page__container _container">
         <div class="service-page__top _grid-3-col">
-            <h2 class="h2 services-page__title _sliding-text">
+            <h1 class="h2 services-page__title _sliding-text">
                 <span class="_sliding-text__line">We are a team <br /> </span>
                 <span class="_sliding-text__line">of international experts</span>
                 <span class="_sliding-text__line">
                     united by a
                     <span class="services-page__title services-page__title--orange">single goal</span>
                 </span>
-            </h2>
-            <h4 class="h4 services-page__sub-title ">We specialise in creating eCommerce websites. We focus on conversion in balance with your brand. Our websites are future proof, with a solid backend and easy to use content management system. We maintain, update, and support with on-going strategic recommendations from the minute you go-live.</h4>
+            </h1>
+            <h2 class="h4 services-page__sub-title ">We specialize in creating eCommerce websites that bring new customers in balance with your brand. Our websites are future-proof, with a solid backend and an easy-to-use content management system. We maintain, update, and support ongoing strategic recommendations from the minute you go live.</h2>
         </div>
 
         <div class="services-page__squares services-squares" data-mage-init='{"slickServicePage":{}}'>
@@ -44,8 +44,12 @@
                 <div class="service-section__label _section-label">Design</div>
                 <div class="service-section__content">
                     <h3 class="h3 service-section__title">Web Design</h3>
-                    <p class="service-section__text"> The full cycle of services to create and launch a website from scratch or redesign a live website along with the modern trends and requirements.</p>
-                    <p class=" service-section__text service-section__text--second-line">We will help you take your online store to the next level with our eCommerce design services. Contact us to learn more about how a good user experience and user interface can impact your online sales.</p>
+                    <p class="service-section__text"> The full cycle of services to create and launch a website from scratch or redesign a live website along with the modern trends and requirements.
+
+                    </p>
+                    <p class=" service-section__text service-section__text--second-line">We will help you take your online store to the next level with our eCommerce design services. Contact us to learn more about how a good user experience and interface impact your online sales.
+
+                    </p>
                 </div>
                 <div class="service-section__image">
                     <img loading="lazy" src="{{media url='wysiwyg/Service/design.png'}}" alt="devolope-image">
@@ -62,7 +66,7 @@
                 <div class="service-section__content">
                     <h3 class="h3 service-section__title">Magento Development </h3>
                     <p class="service-section__text">Magento is a complex platform and requires the right people to maintain it for it to be stable and flexible in the long run. We are here for that.</p>
-                    <p class=" service-section__text service-section__text--second-line">Our Magento certified developers are trained to develop Magento stores with a long-term view on the functionality and maintainability in mind.</p>
+                    <p class=" service-section__text service-section__text--second-line">Our Magento-certified developers are trained to develop Magento stores with a long-term view of functionality and maintainability in mind.</p>
                 </div>
             </div>
         </section>
@@ -72,7 +76,8 @@
                 <div class="service-section__label _section-label">Migration</div>
                 <div class="service-section__content">
                     <h3 class="h3 service-section__title">Magento 2 <br> Migration</h3>
-                    <p class=" service-section__text">Magento 1 to Magento 2 migration process is perceived to be intimidating by some merchants, resulting in their postponing the procedure indefinitely. Plus, after years of using Magento 1 many grew attached to the familiar features and demonstrated robustness of the platform. </p>
+                    <p class=" service-section__text">Some merchants perceive the Magento 1 to Magento 2 migration process as intimidating, resulting in their postponing the procedure indefinitely. After years of using Magento 1, many grew attached to the familiar features and demonstrated the platform's robustness.
+                    </p>
                 </div>
                 <div class="service-section__image">
                     <img loading="lazy" src="{{media url='wysiwyg/Service/migration.png'}}" alt="migration-image ">
@@ -88,7 +93,8 @@
                 </div>
                 <div class="service-section__content">
                     <h3 class="h3 service-section__title">Magento PWA</h3>
-                    <p class=" service-section__text">Empower your Magento by using Progressive Web Apps thus reaching lightning fast loading times, improved experience on mobile and much more. Our extensive experience with building Magento PWA stores will ensure your headless eCommerce store is ahead of the competition.</p>
+                    <p class=" service-section__text">Empower your Magento by using Progressive Web Apps, thus reaching lightning-fast loading times, improved experience on mobile, and much more. Our extensive experience building Magento PWA stores will ensure your headless eCommerce store is ahead of the competition.
+                    </p>
                 </div>
             </div>
         </section>
@@ -119,8 +125,8 @@
                 </div>
                 <div class="service-section__content">
                     <h3 class="h3 service-section__title">Magento Support</h3>
-                    <p class=" service-section__text">We are an agency offering fully managed support and maintenance service for your business with 24/7 availability to ensure your online store improves and grows. Specialized in Magento and offering a vast spectrum of services, our support & maintenance offering is the perfect way to scale your online business.</p>
-                    <p class=" service-section__text service-section__text--second-line">It does not matter if you are from the United States, Australia, China or Europe. We work with different sized eCommerce stores all over the globe.</p>
+                    <p class=" service-section__text">We are an agency offering fully managed support and maintenance service for your business with 24/7 availability to ensure your online store improves and grows. Our support & maintenance offering is the perfect way to scale your online business, specializing in Magento and offering a vast spectrum of services.</p>
+                    <p class=" service-section__text service-section__text--second-line">It does not matter if you are from the United States, Australia, China, or Europe. We work with different-sized eCommerce stores all over the globe.</p>
                 </div>
             </div>
         </section>
@@ -130,7 +136,7 @@
                 <div class="service-section__label  _section-label">Optimization</div>
                 <div class="service-section__content">
                     <h3 class="h3 service-section__title">Server & Magento Optimization</h3>
-                    <p class=" service-section__text">Fix the low page load time & poor Core Web Vitals metrics for your business growth. Contact us to make the best out of the Magento performance with the help of Adobe certified experts.</p>
+                    <p class=" service-section__text">Fix the low page load time & poor Core Web Vitals metrics for your business growth. Contact us to make the best out of the Magento performance with the help of Adobe-certified experts.</p>
                     <ul class="service-section__list">
                         <li>Website code improvements</li>
                         <li>Browser caching & render time boost</li>
@@ -152,7 +158,7 @@
                 <div class="service-section__content">
                     <h3 class="h3 service-section__title">Implementation Google Analytics 4</h3>
                     <p class=" service-section__text">
-                        If you are a Magento merchants selling products online and strive to attract new customers or improve your conversion rates, you definitely need Google Analytics 4. It is the instrument to gather as much information as possible about your customers behavior from your website since it is the only layer between your customers and your products.
+                        If you are Magento merchant selling products online and striving to attract new customers or improve your conversion rates, you need Google Analytics 4. It is the instrument to gather as much information as possible about your customers' behavior from your website since it is the only layer between your customers and your products.
                     </p>
                     <a href="{{store url='services/implementation-google-analytics-4-on-magento-2-with-gtm'}}">
                         <button type="button" class="service-section__button _button _button--arrow" style="color:#333">
