content changes on cms pages, block

--- a/files for admin/CMS Blocks/header-link.phtml
+++ b/files for admin/CMS Blocks/header-link.phtml
@@ -1,7 +1,7 @@
 <p>
-    <a class="header__links--item" href="https://perspective.net.ua/company">Company</a> 
-    <a class="header__links--item" href="https://perspective.net.ua/work">Work</a> 
-    <a class="header__links--item" href="https://perspective.net.ua/services">Services</a> 
-    <a class="header__links--item" href="https://perspective.net.ua/blog">Blog</a> 
-    <a class="header__links--item" href="https://perspective.net.ua/contacts">Contacts</a>
+    <a class="header__links--item" href="{{store url='company'}}">Company</a> 
+    <a class="header__links--item" href="{{store url='work'}}">Work</a> 
+    <a class="header__links--item" href="{{store url='services'}}">Services</a> 
+    <a class="header__links--item" href="{{store url='blog'}}">Blog</a> 
+    <a class="header__links--item" href="{{store url='contacts'}}">Contacts</a>
 </p>
