--- a/files for admin/CMS Pages/main.phtml
+++ b/files for admin/CMS Pages/main.phtml
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="digits-intro__item">
-                    <div class="digits-intro__number">42</div>
+                    <div class="digits-intro__number">82</div>
                     <div class="digits-intro__text">
                         successfull <br />projects
                     </div>
@@ -1065,6 +1065,33 @@
                 <div class="main-certification__magento-achievments magento-achievments">
                     <div class="magento-achievments__all">
                         <img loading="lazy" src="{{media url='wysiwyg/Group-525.png'}}" alt="all" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="badges">
+        <div class="badges__container _container _grid-2-col">
+            <div class="badges__section-label _section-label">
+                Badges
+            </div>
+            <div class="badges__col">
+                <div class="flex badges__list badges-list">
+                    <div class="badges-list__item">
+                        <img class="badges-list__image" width="166" height="180" src="{{media url='wysiwyg/Main/badges/clutch.png'}}" alt="clutch">
+                    </div>
+                    <div class="badges-list__item">
+                        <img class="badges-list__image" width="137" height="180" src="{{media url='wysiwyg/Main/badges/TopeCom.svg'}}" alt="TopeCom">
+                    </div>
+                    <div class="badges-list__item">
+                        <img class="badges-list__image" width="210" height="180" src="{{media url='wysiwyg/Main/badges/GoodFirms.svg'}}" alt="GoodFirms">
+                    </div>
+                    <div class="badges-list__item">
+                        <img class="badges-list__image" width="128" height="180" src="{{media url='wysiwyg/Main/badges/TopSales.svg'}}" alt="TopSales">
+                    </div>
+                    <div class="badges-list__item">
+                        <img class="badges-list__image" width="180" height="180" src="{{media url='wysiwyg/Main/badges/TopDev.png'}}" alt="TopDev">
                     </div>
                 </div>
             </div>
