--- a/files for admin/CMS Blocks/footer-links-content.phtml
+++ b/files for admin/CMS Blocks/footer-links-content.phtml
@@ -7,7 +7,8 @@
     <div class="h4 footer-links-content__link">
       <a href="{{store url='blog'}}">Blog</a>
     </div>
-    <div class="h4 footer-links-content__link">
+    <!-- Страницы пока отсутствуют на сайте -->
+    <!-- <div class="h4 footer-links-content__link">
       <a href="">Partners</a>
     </div>
     <div class="h4 footer-links-content__link">
@@ -15,7 +16,7 @@
     </div>
     <div class="h4 footer-links-content__link">
       <a href="">Terms of Use</a>
-    </div>
+    </div> -->
   </div>
   <!-- Company -->
   <div
@@ -36,9 +37,10 @@
       <div class="footer-links-content__sublink">
         <a href="{{store url='company'}}">About the team</a>
       </div>
-      <div class="footer-links-content__sublink">
+      <!-- Страницы еще нет -->
+      <!-- <div class="footer-links-content__sublink">
         <a href="">Events</a>
-      </div>
+      </div> -->
       <div class="footer-links-content__sublink">
         <a href="{{store url='careers'}}">Careers</a>
       </div>
@@ -61,26 +63,30 @@
       x-bind:style="selected == 'services' ? 'max-height: ' + $refs.services.scrollHeight + 'px' : ''"
     >
       <div class="footer-links-content__sublink">
-        <a href="{{store url='services#services-design-section'}}">Web Design</a>
+        <a href="{{store url='services'}}#services-design-section">Web Design</a>
       </div>
       <div class="footer-links-content__sublink">
-        <a href="{{store url='services#services-development-section'}}">Magento Development</a>
+        <a href="{{store url='services'}}#services-development-section">Magento Development</a>
       </div>
       <div class="footer-links-content__sublink">
-        <a href="{{store url='services#services-migration-section'}}">Magento 2 Migration</a>
+        <a href="{{store url='services'}}#services-migration-section">Magento 2 Migration</a>
       </div>
       <div class="footer-links-content__sublink">
-        <a href="{{store url='services#services-pwa-section'}}">Magento PWA</a>
+        <a href="{{store url='services'}}#services-pwa-section">Magento PWA</a>
       </div>
       <div class="footer-links-content__sublink">
-        <a href="{{store url='services#services-security-section'}}">Magento Security Audit</a>
+        <a href="{{store url='services'}}#services-security-section">Magento Security Audit</a>
       </div>
       <div class="footer-links-content__sublink">
-        <a href="{{store url='services#services-support-section'}}">Magento Support</a>
+        <a href="{{store url='services'}}#services-support-section">Magento Support</a>
       </div>
       <div class="footer-links-content__sublink">
-        <a href="{{store url='services#services-optimization-section'}}">Server & Magento Optimization</a>
+        <a href="{{store url='services'}}#services-optimization-section">Server & Magento Optimization</a>
       </div>
+      <div class="footer-links-content__sublink">
+        <a href="{{store url='services/implementation-google-analytics-4-on-magento-2-with-gtm'}}">Implementation Google Analytics 4</a>
+      </div>
+      
     </div>
   </div>
 
@@ -100,7 +106,7 @@
       x-ref="contacts"
       x-bind:style="selected == 'contacts' ? 'max-height: ' + $refs.contacts.scrollHeight + 'px' : ''"
     >
-        {{widget type="Magento\Cms\Block\Widget\Block" template="widget/static_block/default.phtml" block_id="6"}}
+        {{widget type="Magento\Cms\Block\Widget\Block" template="widget/static_block/default.phtml" block_id="footer_info"}}
     </div>
   </div>
 </div>
